Unticketed cosmetic fix: allow line wrapping in titles in listviews

--- a/www/index.css
+++ b/www/index.css
@@ -50,6 +50,10 @@ td,th {
  * JQM overrides not specific to any one page
  */
 
+.ui-li-heading {
+    white-space:normal; /* allow line-wrapping of ttles in listings */
+}
+
 .ui-header {
     font-family: Montserrat;
 }
